Makefile: start a build within the devcontainer, from the host

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,4 +1,5 @@
 {
+    "runArgs": ["--name=latex-paper-template"],
     "image": "ghcr.io/giacomolanciano/devcontainer-latex:v1.4.0",
     "features": {
         "ghcr.io/devcontainers/features/common-utils:1": {
