.devcontainer.json: add markdown-related extensions

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -23,6 +23,7 @@
     "customizations": {
         "vscode": {
             "extensions": [
+                "DavidAnson.vscode-markdownlint",
                 "eamodio.gitlens",
                 "james-yu.latex-workshop",
                 "ms-vscode.wordcount",
@@ -30,7 +31,8 @@
                 "stevensona.character-count",
                 "stkb.rewrap",
                 "tecosaur.latex-utilities",
-                "valentjn.vscode-ltex"
+                "valentjn.vscode-ltex",
+                "yzhang.markdown-all-in-one"
             ],
             "settings": {
                 "terminal.integrated.profiles.linux":{
