--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "runArgs": ["--name=latex-paper-template"],
+    "runArgs": ["--name=paperops"],
     "image": "ghcr.io/giacomolanciano/devcontainer-latex:v1.6.0",
     "features": {
         "ghcr.io/devcontainers/features/common-utils:1": {
